add the changes

--- a/gallery.html
+++ b/gallery.html
@@ -17,11 +17,11 @@
     <link rel="stylesheet" href="css/glider.css" />
     <link rel="icon" href="images/favicon/android-chrome-192x192.png" />
     <title>Persona Bridal Studio</title>
-    <style>
+    <!-- <style>
       * {
         border: 1px solid red;
       }
-    </style>
+    </style> -->
   </head>
   <body>
     <!-- navigation starts -->
