--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             </div>  
            <!-- Modal start -->
             <div class="modal fade" id="serviceModal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-              <div class="modal-dialog modal-dialog-centered">
+              <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
                 <div class="modal-content">
                   <div class="modal-header">
                     <h1 class="modal-title fs-5" id="serviceModalLabel">Makeup Services</h1>
@@ -204,7 +204,7 @@
             </div>
  <!-- Modal start -->
 <div class="modal fade" id="serviceModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
     <div class="modal-content">
       <div class="modal-header">
         <h1 class="modal-title fs-5" id="serviceModalLabel2">Hair Care Services</h1>
@@ -263,7 +263,7 @@
             </div>
             <!-- modal 3 start -->
             <div class="modal fade" id="serviceModal3" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
     <div class="modal-content">
       <div class="modal-header">
         <h1 class="modal-title fs-5" id="serviceModalLabel3">Skin Care Services</h1>
