--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     </div>
       
                     <div>
-                      <a href="#" class="mb-4" >Explore Our Work</a>
+                      <a href="#portfolios" class="mb-4" >Explore Our Work</a>
                     </div>
      
                   </div>
@@ -360,23 +360,23 @@ Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam ut at fugiat har
             <div class="glider-contain multiple" data-glider-options="{&quot;gap&quot;: 20}">
               <div class="glider">
                 <div class="photo-container text-center rounded-5">
-                 <img src="images/brides/pexels-eternal-slayer-17910669.jpg" alt="" class="photo img-fluid">
+                 <img src="images/brides/pexels-eternal-slayer-17910669.jpeg" alt="bride photo" class="photo img-fluid">
                 </div>
                 <!-- 2 -->
                 <div class="photo-container text-center rounded-5">
-                 <img src="images/brides/pexels-farddin-protik-2106685.jpg" alt="" class="photo img-fluid">
+                 <img src="images/brides/pexels-farddin-protik-2106685.jpeg" alt="bride photo" class="photo img-fluid">
                 </div>
                 <!-- 3 -->
                <div class="photo-container text-center rounded-5">
-                 <img src="images/brides/pexels-nripen-kumar-roy-725462.jpg" alt="" class="photo img-fluid" >
+                 <img src="images/brides/pexels-nripen-kumar-roy-725462.jpeg" alt="bride photo" class="photo img-fluid" >
                 </div>
                 <!-- 4 -->
                 <div class="photo-container text-center rounded-5">
-                 <img src="images/brides/pexels-skg-photography-2053852.jpg" alt="" class="photo img-fluid">
+                 <img src="images/brides/pexels-skg-photography-2053852.jpeg" alt="bride photo" class="photo img-fluid">
                 </div>
                 <!-- 5 -->
                 <div class="photo-container  text-center rounded-5">
-                 <img src="images/brides/pexels-ritam-das-9901792.jpg" alt="" class="photo img-fluid">
+                 <img src="images/brides/pexels-ritam-das-9901792.jpeg" alt="" class="photo img-fluid">
                 </div>
               </div>
               <button aria-label="Previous" class="glider-prev">
