--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
       <div class="container-fluid">
         <!-- icon & brand name -->
         <a href="index.html" aria-current="page" class="navbar-brand">
-          <img src="images/logo.png" alt="logo" width="150" />
+          <!-- <img src="images/logo.png" alt="logo" width="150" /> -->
+          <img src="images/logo.svg" alt="logo" width="150" />
         </a>
         <!-- hamburger icon & nav-items-->
         <button
