added preload and compressed images

--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/gallery-styles.css" />
-    <link rel="stylesheet" href="css/glider.css" />
+    <!-- <link rel="stylesheet" href="css/glider.css" /> -->
     <link rel="icon" href="images/favicon/android-chrome-192x192.png" />
     <title>Persona Bridal Studio</title>
     <!-- <style>
@@ -213,12 +213,12 @@
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="js/glider.min.js"></script>
+    <!-- <script src="js/glider.min.js"></script> -->
     <script
       src="https://static.elfsight.com/platform/platform.js"
       data-use-service-core
       defer
     ></script>
-    <script src="js/script.js"></script>
+    <!-- <script src="js/script.js"></script> -->
   </body>
 </html>
