--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="css/styles.css" />
      <link rel="stylesheet" href="css/glider.css" />
     <link rel="icon" href="images/favicon/android-chrome-192x192.png" />
+     <link rel="preload" as="image" href="images/header-large-compressed.jpeg" />
+     <link rel="preload" as="image" href="images/header-background-mobile-original.jpeg" />
     <title>Persona Bridal Studio</title>
     <!-- <style>
       * {
@@ -91,7 +93,7 @@
               </p>
 
               <div class="d-grid d-flex justify-content-center p-2">
-                <a href="#services" class="btn btn-primary text-white me-3"
+                <a href="#services" class="d-none d-md-blockbtn btn-primary text-white me-3"
                   >Learn More</a
                 >
                 <a href="#contact" class="btn btn-primary text-white">Contact Us</a>
@@ -395,7 +397,7 @@ Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam ut at fugiat har
         <div class="row">
           <div class="col-md-8 offset-md-2">
             <div class="text-center py-2">
-               <a href="gallery.html">See more of our work here</a>
+               <a href="gallery.html" >See more of our work here</a>
             </div>
            
           </div>
@@ -411,13 +413,13 @@ Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam ut at fugiat har
     <!-- Testimonial start -->
 
     <section id="testimonials" class="pt-2">
-      <div class="container-xl p-5">
-        <div class="row">
+      <div class="container-xl">
+        <div class="row p-5">
           <div class="col-lg-8 offset-lg-2 text-center">
             <h2 id="testimonials-header"> What Customers Have To Say</h2>
           </div>
            <div class="col-lg-8 offset-lg-2">
-             <div id="testimonialCarousel" class="carousel slide p-5">
+             <div id="testimonialCarousel" class="carousel slide pt-5 px-5">
         <div class="carousel-inner">
        
                    <!-- slide 1 -->
