added fetchpriority to link in head

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <link rel="stylesheet" href="css/styles.css" />
      <link rel="stylesheet" href="css/glider.css" />
     <link rel="icon" href="images/favicon/android-chrome-192x192.png" />
-     <link rel="preload" as="image" href="images/header-large-compressed.jpeg" />
-     <link rel="preload" as="image" href="images/header-background-mobile-original.jpeg" />
+     <link rel="preload" fetchpriority="high" as="image" href="images/header-large-compressed.jpeg" />
+     <link rel="preload" fetchpriority="high" as="image" href="images/header-background-mobile-original.jpeg" />
     <title>Persona Bridal Studio</title>
     <!-- <style>
       * {
