--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap"
       rel="stylesheet"
+      media="print" 
+      onload="this.onload=null;this.removeAttribute('media');"
     />
     <link rel="stylesheet" href="css/fontawesome.css" />
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
@@ -16,7 +18,7 @@
     <link rel="stylesheet" href="css/styles.css" />
      <link rel="stylesheet" href="css/glider.css" />
     <link rel="icon" href="images/favicon/android-chrome-192x192.png" />
-     <link rel="preload" fetchpriority="high" as="image" href="images/header-large-compressed.jpeg" />
+     <link rel="preload" fetchpriority="high" as="image" media="(min-width: 768px)" href="images/header-large-compressed.jpeg" />
      <link rel="preload" fetchpriority="high" as="image" href="images/header-background-mobile-original.jpeg" />
     <title>Persona Bridal Studio</title>
     <!-- <style>
