code to eliminate render blocking js

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
      <link rel="preload" fetchpriority="high" as="image" media="(min-width: 768px)" href="images/header-large-compressed.jpeg" />
      <link rel="preload" fetchpriority="high" as="image" href="images/header-background-mobile-original.jpeg" />
     <title>Persona Bridal Studio</title>
+     <script defer src="js/bootstrap.bundle.min.js"></script>
+    <script defer src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+   <script defer src="js/glider.min.js"></script>
+    <script defer src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+    <script defer src="js/script.js"></script>
     <!-- <style>
       * {
         border: 1px solid red;
@@ -549,10 +554,6 @@ I have joined 6 Months Beautician & Makeup Course at Persona's Beauticians Accad
     <!-- footer end -->
 
 
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-   <script src="js/glider.min.js"></script>
-    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
-    <script src="js/script.js"></script>
+   
   </body>
 </html>
