--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam ut at fugiat har
             <h2 id="testimonials-header"> What Customers Have To Say</h2>
           </div>
            <div class="col-lg-8 offset-lg-2">
-             <div id="testimonialCarousel" class="carousel slide pt-5">
+             <div id="testimonialCarousel" class="carousel slide pt-5 d-flex flex-row justify-content-center">
         <div class="carousel-inner" style="width: 300px;height: 500px; overflow-y: auto;">
        
                    <!-- slide 1 -->
