changes in gallery page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 
       <script defer src="js/glider.min.js"></script>
        <script src="js/replaceme.min.js"></script>
+     
       <script defer src="js/script.js"></script>
+      <script defer src="js/glider.js"></script> 
      
       <script defer src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
       <script defer src="js/bootstrap.bundle.min.js"></script>
