--- a/gallery.html
+++ b/gallery.html
@@ -352,8 +352,8 @@
     <!-- footer end -->
 
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
 
-    <script src="js/script.js"></script>
+    <script src="js/gallery.js"></script>
   </body>
 </html>
