updated about section

--- a/index.html
+++ b/index.html
@@ -373,10 +373,15 @@ We ensure you will look stunning and feel confident on your special day.
   <div class="col-md-6">
      <div class="text-container text-center pt-3">
           <h2 class="mb-4">Saritha Murali</h2>
-          <p >
-            Persona Bridal Studio is a manifestation of my childhood dream, a deep-rooted love for beauty, and unwavering dedication. provides on-location bridal hair and makeup services in the tri-state area and worldwide. We also offer a luxury bridal suite rental in East Northport, for the ultimate wedding day glam party. ​Our emphasis on quality, talent, and customization, alongside our compromising passion, is what continues to differentiate us from other hair and makeup artists.​​ We take pride in being able to continuously provide the most pampered experience to all of our clients.​
-
-          </p>
+    <p>
+    Allow me to introduce myself - Saritha Murali, the proud owner of Persona Bridal Studio. With a vision rooted in my childhood dreams and fueled by a profound love for beauty, I embarked on this journey over two decades ago. Today, Persona Bridal Studio stands as a testament to my unwavering dedication and passion for excellence.
+</p>
+<p>
+   We specialize in delivering on-location bridal hair and makeup services across Kerala. What sets us apart is our commitment to quality and customization. Each brushstroke and hairstyle is tailored to reflect the unique personality and preferences of our clients.
+</p>
+<p>
+    At Persona Bridal Studio, we believe in the power of continual learning to enhance our offerings. This dedication to ongoing education allows us to stay at the forefront of trends and techniques, ensuring that we can provide you with the latest and most innovative services. As a result, our service menu boasts a range of specialized hair and skincare treatments designed to cater to your individual needs. Visit our studio to experience personalized care that revitalizes both your hair and skin, and let us help you achieve your beauty goals.
+</p>
          </div>
   </div>
         
