--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
      <link rel="preload" fetchpriority="high" as="image" media="(min-width: 768px)" href="images/header-large-compressed.jpeg" />
      <link rel="preload" fetchpriority="high" as="image" href="images/header-background-mobile-original.jpeg" />
     <title>Persona Bridal Studio</title>
+    <meta name="description" content="If you are looking for a parlour that specializes in Bridal Makeup, Hair and Skincare Services, you’ve found it! Visit our studio to experience personalized care that revitalizes both your hair and skin, and let us help you achieve your beauty goals."/>
      <script src="js/replaceme.min.js"></script>
 
       <script defer src="js/glider.min.js"></script>
@@ -375,13 +376,13 @@ We ensure you will look stunning and feel confident on your special day.
      <div class="text-container text-center pt-3">
           <h2 class="mb-4">Saritha Murali</h2>
     <p>
-    Allow me to introduce myself - Saritha Murali, the proud owner of Persona Bridal Studio. With a vision rooted in my childhood dreams and fueled by a profound love for beauty, I embarked on this journey over two decades ago. Today, Persona Bridal Studio stands as a testament to my unwavering dedication and passion for excellence.
+    I am the proud owner of Persona Beauty Salon. With a vision rooted in my childhood dreams and fueled by a profound love for beauty, I embarked on this journey over two decades ago. Today, Persona Beauty Salon stands as a testament to my unwavering dedication and passion for excellence.
 </p>
 <p>
    We specialize in delivering on-location bridal hair and makeup services across Kerala. What sets us apart is our commitment to quality and customization. Each brushstroke and hairstyle is tailored to reflect the unique personality and preferences of our clients.
 </p>
 <p>
-    At Persona Bridal Studio, we believe in the power of continual learning to enhance our offerings. This dedication to ongoing education allows us to stay at the forefront of trends and techniques, ensuring that we can provide you with the latest and most innovative services. As a result, our service menu boasts a range of specialized hair and skincare treatments designed to cater to your individual needs. Visit our studio to experience personalized care that revitalizes both your hair and skin, and let us help you achieve your beauty goals.
+    At Persona Beauty Salon, we believe in the power of continual learning to enhance our offerings. This dedication to ongoing education allows us to stay at the forefront of trends and techniques, ensuring that we can provide you with the latest and most innovative services. As a result, our service menu boasts a range of specialized hair and skincare treatments designed to cater to your individual needs. Visit our studio to experience personalized care that revitalizes both your hair and skin, and let us help you achieve your beauty goals.
 </p>
          </div>
   </div>
