minor changes in index.html

--- a/gallery.html
+++ b/gallery.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>name
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="css/gallery-styles.css" />
 
     <link rel="icon" href="images/favicon/android-chrome-192x192.png" />
-    <title>Persona Bridal Studio</title>
+    <title>Persona Bridal Studio - Gallery</title>
     <!-- <style>
       * {
         border: 1px solid red;
