fixed h2 in modals

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+       <link rel="icon" href="images/favicon/android-chrome-192x192.png" />
+     <link rel="preload" fetchpriority="high" as="image" media="(min-width: 768px)" href="images/header-large-compressed.jpeg" type="image/jpeg" />
+     <link rel="preload" fetchpriority="high" as="image" href="images/header-background-mobile-original.jpeg" type="image/jpeg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link 
@@ -19,9 +22,7 @@
     <link rel="stylesheet" href="css/styles.css" />
      <link rel="stylesheet" href="css/glider.css" media="print" onload="this.onload=null;this.removeAttribute('media');" />
      <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="icon" href="images/favicon/android-chrome-192x192.png" />
-     <link rel="preload" fetchpriority="high" as="image" media="(min-width: 768px)" href="images/header-large-compressed.jpeg" type="image/jpeg" />
-     <link rel="preload" fetchpriority="high" as="image" href="images/header-background-mobile-original.jpeg" type="image/jpeg" />
+ 
     <title>Persona - Home</title>
     <meta name="description" content="If you are looking for a parlour that specializes in Bridal Makeup, Hair and Skincare Services, you’ve found it! Visit our studio to experience personalized care that revitalizes both your hair and skin, and let us help you achieve your beauty goals."/>
      <script src="js/replaceme.min.js"></script>
@@ -159,7 +160,7 @@ We ensure you will look stunning and feel confident on your special day.
               <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h2> class="modal-title fs-5" id="serviceModalLabel">Makeup Services</h2>
+                    <h2 class="modal-title fs-5" id="serviceModalLabel">Makeup Services</h2>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                   </div>
                   <div class="modal-body p-5">
@@ -243,7 +244,7 @@ We ensure you will look stunning and feel confident on your special day.
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
     <div class="modal-content">
       <div class="modal-header">
-        <2 class="modal-title fs-5" id="serviceModalLabel2">Hair Care Services</h2>
+        <h2 class="modal-title fs-5" id="serviceModalLabel2">Hair Care Services</h2>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body p-5">
