fixed render blocking js

--- a/gallery.html
+++ b/gallery.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>name
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -26,10 +26,7 @@
     <link rel="icon" href="images/favicon/android-chrome-192x192.png" />
     <title>Persona Bridal Studio - Gallery</title>
 
-        <script src="js/bootstrap.bundle.min.js"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
-
-    <script src="js/gallery.js"></script>
+ 
   </head>
   <body>
     <!-- navigation starts -->
@@ -350,6 +347,8 @@
       </div>
     </footer>
     <!-- footer end -->
+           <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/gallery.js"></script>
 
 
   </body>
